--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,6 +3,7 @@
   <%= f.input :title %>
   <%= f.input :body %>
   <%= f.input :should_tweet %>
+  <%= f.input :tweet_body %>
   <%= f.actions do %>
     <%= f.action :submit, as: :button %>
   <% end %>
